--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build-and-test:
@@ -22,7 +19,15 @@ jobs:
         python-version: 3.9
 
     - name: Install dependencies
-      run: pip install -r requirements.txt
+      run: |
+        pip install -r requirements.txt
 
-    - name: Run the app
-      run: python app.py
+    - name: Test Docker build
+      run: |
+        docker build -t weather-app .
+
+    - name: Test the app
+      run: |
+        python app.py &
+        sleep 5
+        curl http://127.0.0.1:5000
