--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,25 +9,43 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: testpassword
+          POSTGRES_DB: weather_app
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 3
+
+    env:
+      DB_USER: weather_app_u8d1_user
+      DB_PASSWORD: tZSPLEC3S0ch50Ugd6uQWJygDN6Po0rg
+      DB_HOST: dpg-ctltsidumphs73dbr9h0-a
+      DB_PORT: 5432
+      DB_NAME: weather_app_u8d1
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.9
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
 
-    - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
 
-    - name: Test Docker build
-      run: |
-        docker build -t weather-app .
-
-    - name: Test the app
-      run: |
-        python app.py &
-        sleep 5
-        curl http://127.0.0.1:5000
+      - name: Run tests
+        run: |
+          python app.py &
+          sleep 10
+          curl http://127.0.0.1:5000
